supplemental: Update Google-Style coverage table