@@ -24,7 +24,6 @@ import static com.google.common.truth.Truth.assertWithMessage;
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -132,7 +131,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text='InputXpathQueryGenerator']]"
                     + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='Label']]/SLIST/LITERAL_SWITCH/LCURLY");
         assertWithMessage("Generated queries do not match expected ones")
@@ -147,7 +146,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text='InputXpathQueryGenerator']]/OBJBLOCK"
                 + "/INSTANCE_INIT/SLIST/RCURLY");
         assertWithMessage("Generated queries do not match expected ones")
@@ -179,7 +178,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text='InputXpathQueryGenerator']]/OBJBLOCK"
                 + "/METHOD_DEF[./IDENT[@text='callSomeMethod']]/LPAREN");
         assertWithMessage("Generated queries do not match expected ones")
@@ -221,7 +220,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='File']]");
         assertWithMessage("Generated queries do not match expected ones")
             .that(actual)
@@ -266,7 +265,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text='InputXpathQueryGenerator']]"
                     + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='Label']]/SLIST/LITERAL_SWITCH");
         assertWithMessage("Generated queries do not match expected ones")
@@ -321,7 +320,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathQueryGenerator']]/OBJBLOCK/METHOD_DEF["
                 + "./IDENT[@text='foo']]/SLIST/LITERAL_FOR/FOR_ITERATOR/ELIST/COMMA");
@@ -354,7 +353,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='JToolBar']]");
         assertWithMessage("Generated queries do not match expected ones")
             .that(actual)
@@ -368,7 +367,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='Iterator']]");
         assertWithMessage("Generated queries do not match expected ones")
             .that(actual)
@@ -382,7 +381,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/IMPORT/DOT[./IDENT[@text='JToolBar']]/DOT/IDENT[@text='javax']");
         assertWithMessage("Generated queries do not match expected ones")
             .that(actual)
@@ -396,7 +395,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF/IDENT[@text='InputXpathQueryGenerator']");
         assertWithMessage("Generated queries do not match expected ones")
             .that(actual)
@@ -471,7 +470,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(detailAst, lineNumber,
                 columnNumber, testFileText, tabWidth);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                     + "[./IDENT[@text='InputXpathQueryGeneratorTabWidth']]/OBJBLOCK"
                     + "/METHOD_DEF[./IDENT[@text='tabAfterMe']]/SLIST");
@@ -493,7 +492,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(detailAst, lineNumber,
                 columnNumber, testFileText, tabWidth);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text='InputXpathQueryGeneratorTabWidth']]"
                     + "/OBJBLOCK/VARIABLE_DEF[./IDENT[@text='endLineTab']]/SEMI");
         assertWithMessage("Generated queries do not match expected ones")
@@ -508,7 +507,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(rootAst, lineNumber,
                 columnNumber, TokenTypes.CLASS_DEF, fileText, DEFAULT_TAB_WIDTH);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF[./IDENT[@text='InputXpathQueryGenerator']]");
         assertWithMessage("Generated queries do not match expected ones")
             .that(actual)
@@ -599,7 +598,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(detailAst,
                 lineNumber, columnNumber, testFileText, tabWidth);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                     + "[./IDENT[@text='InputXpathQueryGeneratorTextBlock']]/OBJBLOCK/"
                     + "VARIABLE_DEF[./IDENT[@text='testOne']]/ASSIGN/EXPR/"
@@ -626,7 +625,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(detailAst,
                 lineNumber, columnNumber, testFileText, tabWidth);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathQueryGeneratorTextBlockNewLine']]/OBJBLOCK/"
                         + "VARIABLE_DEF[./IDENT[@text='testOne']]/ASSIGN/EXPR/"
@@ -653,7 +652,7 @@ public class XpathQueryGeneratorTest extends AbstractModuleTestSupport {
         final XpathQueryGenerator queryGenerator = new XpathQueryGenerator(detailAst,
                 lineNumber, columnNumber, testFileText, tabWidth);
         final List<String> actual = queryGenerator.generate();
-        final List<String> expected = Collections.singletonList(
+        final List<String> expected = List.of(
                 "/COMPILATION_UNIT/CLASS_DEF"
                         + "[./IDENT[@text='InputXpathQueryGeneratorTextBlockCrlf']]/OBJBLOCK/"
                         + "VARIABLE_DEF[./IDENT[@text='testOne']]/ASSIGN/EXPR/"
